--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "1.0.0",
   "description": "杭州自家小猫咪-李先生 - 苹果风格的猫咪展示平台",
   "private": true,
-  "homepage": "https://your-username.github.io/hangzhou-cats",
+  "homepage": "https://wangdali12345.github.io/jincat",
   "keywords": [
     "react",
     "cats",
